# Windows-Path-Migration-Toolkit

./: .gitignore  README.md  build_pyinstaller.py  main.py  pyproject.toml  requirements.txt  test.reg
docs/: pyside6-performance-playbook.md
src/: __init__.py  app_cache.py  app_constants.py  app_exceptions.py  app_logger.py  app_path_manager.py  app_path_migration_core.py  app_path_migration_gui.py  app_path_migration_tool.py  app_singleton.py  build_package.py
