[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-path-migration-toolkit"
version = "0.4.0"
description = "Windows path migration and drive letter fix toolkit for Windows 10/11"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Windows Path Migration Team"}
]
keywords = ["windows", "path", "migration", "registry", "drive-letter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "PySide6>=6.0.0",
    "pywin32>=305",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.10",
    "flake8>=5.0",
    "mypy>=1.0",
    "vulture>=2.6",
]
build = [
    "pyinstaller>=5.0",
]

[project.scripts]
# 命令行入口
wpmt = "src.app_path_migration_gui:main"
wpmt-cli = "src.app_path_migration_tool:main"

[project.urls]
Homepage = "https://github.com/drzqr/Windows-Path-Migration-Toolkit"
Repository = "https://github.com/drzqr/Windows-Path-Migration-Toolkit.git"
Issues = "https://github.com/drzqr/Windows-Path-Migration-Toolkit/issues"

[tool.setuptools]
packages = ["src"]
include-package-data = true

[tool.setuptools.package-data]
src = ["*.py"]

# 代码质量工具配置
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313", "py314"]
include = '\.pyi?$'
exclude = '/(\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist)/'

[tool.isort]
profile = "black"
line_length = 100
py_version = 310
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --cov=src --cov-report=html --cov-report=term-missing"

[tool.vulture]
min_confidence = 80
paths = ["src"]
exclude = ["tests", "build", "dist"]
